# zertyz-rust-playground

./: .gitignore  Cargo.toml  NEXT.md  README.md
big-O/: Cargo.toml  README.md
big-O/src/: big-o.rs  big_o_analysis.rs  conditionals.rs  metrics_allocator.rs
big-o-test-lib/: Cargo.toml
big-o-test-lib/src/: big-o-test-lib.rs
compiler-bug/: Cargo.toml
compiler-bug/src/: compiler-bug.rs
embedded-databases/: Cargo.toml
embedded-databases/src/: embedded-databases.rs
first-class-closures/: Cargo.toml
first-class-closures/src/: first-class-closures.rs
iterators-vs-streams/: Cargo.toml
iterators-vs-streams/src/: iterators-vs-streams.rs
lifetimes/: Cargo.toml
lifetimes/src/: lifetimes.rs
meta-programming/: Cargo.toml  README.md
meta-programming/src/: meta-programming.rs
mmap-containers/: Cargo.toml
mmap-containers/src/: mmap-containers.rs
mmapped-cached-crate/: Cargo.toml  README.md
mmapped-cached-crate/src/: mmapped-cached-crate.rs
neat-date-time-lib/: Cargo.toml
neat-date-time-lib/src/: neat-date-time-lib.rs
reactive-messaging-lib/: Cargo.toml
reactive-messaging-lib/src/: reactive-messaging-lib.rs
reactive-mutiny-lib/: Cargo.toml
reactive-mutiny-lib/src/: reactive-mutiny-lib.rs
rust-mt5-bridge/: Cargo.toml  PRODUCTION_INCIDENT.2022-17-11  README.md
rust-mt5-bridge/RustMT5Bridge/: AccountInfoBridge.mqh  DealPropertiesBridge.mqh  EnumReporter.mqh  JAson.mqh  MarketDataProvider.mq5  RustDll.mqh  RustMt5Bridge.mq5  RustToMQLMethodCall.mqh  SymbolInfoBridge.mqh  TesterScript.mq5  Trader.mq5
rust-mt5-bridge/scripts/: SymbolInfoBridge.mqh  auto_gen_from_mt5_site  mq5_std_lib.rs
rust-mt5-bridge/scripts/local/: accountinformation  dealproperties  enum_book_type  enum_trade_request_actions  enum_trade_transaction_type  marketinfoconstants  mqlbookinfo  mqltick  mqltraderequest  mqltraderesult  mqltradetransaction  orderproperties
rust-mt5-bridge/src/: main.rs
rust-mt5-bridge/src/rust_mt5_bridge/: mod.rs  mq5_std_lib.rs  mql_rust_enum.rs  rust_mt5_bridge.rs  types.rs
rust-mt5-bridge/src/rust_mt5_bridge/comms/: comms.rs  external_connector_processor.rs  messages_model.rs  mod.rs  runtime.rs
rust-mt5-bridge/src/rust_mt5_bridge/mq5_lib/: account_info_bridge.rs  deal_properties_bridge.rs  mod.rs  mql_book_info.rs  mql_tick.rs  mql_trade_request.rs  mql_trade_result.rs  mql_trade_transaction.rs  mt5_codes.rs  symbol_info_bridge.rs  types.rs
rust-mt5-bridge/src/rust_mt5_bridge/ogre_exchange_models/: mod.rs
self-referential-structs/: Cargo.toml
self-referential-structs/src/: self-referential-structs.rs
web-backend-rocket/: Cargo.toml  README.md  build.rs
web-backend-rocket/angular/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json  server.ts  set_theme
web-backend-rocket/angular/src/: assets  common_assets  index.html  styles.sass
web-backend-rocket/angular/src/app/: app-routing.module.ts  app.component.html  app.component.sass  app.component.spec.ts  app.component.ts  app.module.ts
web-backend-rocket/angular/src/app/explorer-form/: explorer-form.component.css  explorer-form.component.html  explorer-form.component.ts  form.ts
web-backend-rocket/angular/src/app/get-service-explorer/: get-service-explorer.component.html  get-service-explorer.component.sass  get-service-explorer.component.spec.ts  get-service-explorer.component.ts
web-backend-rocket/angular/src/app/get-service-explorer-page/: get-service-explorer-page.component.html  get-service-explorer-page.component.sass
web-backend-rocket/angular/src/app/home/: home.component.html  home.component.sass  home.component.ts
web-backend-rocket/angular/src/app/home-page/: home-page.component.html  home-page.component.sass
web-backend-rocket/angular/src/app/navbar/: navbar.component.css  navbar.component.html
web-backend-rocket/angular/src/app/post-service-explorer/: post-service-explorer.component.html  post-service-explorer.component.sass  post-service-explorer.component.spec.ts  post-service-explorer.component.ts
web-backend-rocket/angular/src/app/post-service-explorer-page/: post-service-explorer-page.component.html  post-service-explorer-page.component.sass
web-backend-rocket/angular/src/app/rest-service-explorer/: rest-service-explorer.component.html  rest-service-explorer.component.sass  rest-service-explorer.component.spec.ts  rest-service-explorer.component.ts
web-backend-rocket/angular/src/app/rest-service-explorer-page/: rest-service-explorer-page.component.html  rest-service-explorer-page.component.sass
web-backend-rocket/angular/themes/Material/: Renovat  index.html  styles.sass
web-backend-rocket/angular/themes/Material/app/explorer-form/: explorer-form.component.html
web-backend-rocket/angular/themes/Material/app/get-service-explorer/: get-service-explorer.component.html
web-backend-rocket/angular/themes/Material/app/get-service-explorer-page/: get-service-explorer-page.component.html
web-backend-rocket/angular/themes/Material/app/navbar/: navbar.component.css  navbar.component.html
web-backend-rocket/angular/themes/Material/app/post-service-explorer/: post-service-explorer.component.html
web-backend-rocket/angular/themes/Material/app/post-service-explorer-page/: post-service-explorer-page.component.html
web-backend-rocket/angular/themes/Material/app/rest-service-explorer/: rest-service-explorer.component.html
web-backend-rocket/angular/themes/Material/app/rest-service-explorer-page/: rest-service-explorer-page.component.html
web-backend-rocket/angular/themes/Renovat/: index.html  styles.sass
web-backend-rocket/angular/themes/Renovat/app/: app.component.html
web-backend-rocket/angular/themes/Renovat/app/explorer-form/: explorer-form.component.html
web-backend-rocket/angular/themes/Renovat/app/get-service-explorer-page/: get-service-explorer-page.component.html
web-backend-rocket/angular/themes/Renovat/css/: style.blue.css  style.default.css  style.green.css  style.pink.css  style.red.css  style.sea.css  style.violet.css
web-backend-rocket/src/: static_files.rs  web-backend-rocket.rs
(+10 files in other folders)
