[package]
name = "zertyz-rust-playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "meta-programming",
    "lifetimes",
    "mmap-containers",
    "mmapped-cached-crate",
    "embedded-databases",
    "big-O",
    "first-class-closures",
    "cpp-interop",
    "web-backend-rocket",
]

[dependencies]
