# RELEASE BUILDING:
# RUSTFLAGS="-C target-cpu=native" cargo build --release

[package]
name = "big-o-test-lib"
version = "0.1.0"
edition = "2021"
default-run = "big-o-test-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "big-o-test-lib"
path = "src/big-o-test-lib.rs"

[dependencies]
big-o-test = "0.2"


# see https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"     # disables stack traces / stack unwiding
#rustflags = ["-C", "target-cpu=native"]    # this seems not to work
#overflow-checks = true     # might help debug release-only bugs

#[release-dependencies]
#jemallocator = "0.3.2"
