[package]
name = "embedded-databases"
version = "0.1.0"
edition = "2018"
default-run = "embedded-databases"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "embedded-databases"
path = "src/embedded-databases.rs"

[dependencies]

structsy="0.3"
structsy-derive="0.3"

sled={version="0.34", features=["io_uring"]}
