[package]
name = "lifetimes"
version = "0.1.0"
edition = "2018"
default-run = "lifetimes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[dependencies]
serde = "1.0.136"
serde_json = "1.0.78"
serde_with = { version="1.12.0", features=["macros", "json"] }
