[package]
name = "mmapped-cached-crate"
version = "0.1.0"
edition = "2018"
default-run = "mmapped-cached-crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mmapped-cached-crate"
path = "src/mmapped-cached-crate.rs"

[dependencies]
cached = "0.24"