[package]
name = "self-referential-structs"
version = "0.1.0"
edition = "2021"
default-run = "self-referential-structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "self-referential-structs"
path = "src/self-referential-structs.rs"

[dependencies]

[features]
dox = []