# RELEASE BUILDING:
# RUSTFLAGS="-C target-cpu=native" cargo build --release

[package]
name = "web-backend-rocket"
version = "0.1.0"
edition = "2021"
default-run = "web-backend-rocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web-backend-rocket"
path = "src/web-backend-rocket.rs"


[build-dependencies]
walkdir = "2.3"
#flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }  # gzip / gunzip
flate2 = "1.0"  # gzip / gunzip
chrono = "0.4"


[dependencies]
lazy_static = "1.4"
rocket = "0.5.0-rc.1"

# see https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"     # disables stack traces / stack unwiding
#rustflags = ["-C", "target-cpu=native"]    # this seems not to work
#overflow-checks = true     # might help debug release-only bugs

#[release-dependencies]
#jemallocator = "0.3.2"
